# uni-db-index-task

./: .golangci.yml  Gopkg.toml  build_n_run.sh  cassandra.cql  config.yaml  docker-compose.yaml  go.mod  go.sum  run.sh
client/: package-lock.json  package.json
client/src/: App.vue  main.ts
client/src/_helpers/: complaints.ts  countries.ts  goods.ts  jsoner.ts  login.ts  orders.ts  signup.ts  withjwt.ts
client/src/components/: Complaint.vue  CtxButton.vue  Good.vue  InlineAccount.vue  SignIn.vue  SignUp.vue  UserComplaints.vue  UserInfo.vue  UserOrders.vue
client/src/layouts/: AppLayout.vue  BlankLayout.vue
client/src/router/: index.ts
client/src/store/: index.ts
client/src/views/: AuthPage.vue  CartPage.vue  Complaints.vue  GoodPage.vue  Home.vue  Inventory.vue  Login.vue  UserPage.vue
cmd/: main.go
db/: Gopkg.toml  config.yaml
db/cmd/: main.go
db/explain/: fragmentation_after_20%.csv
db/explain/with_index/: 1.tsv  3.tsv  4.tsv  6.tsv
db/explain/without_index/: 4.tsv
db/internal/data/: main.go
db/sql/: indexes.sql  requests.sql  schema.sql
explain/: fragmentation.csv  fragmentation_after_build.csv
explain/with_index/: 2.tsv  3.tsv  4.tsv  5.tsv  7.tsv
explain/without_index/: 1.tsv  2.tsv  3.tsv  5.tsv  6.tsv  7.tsv
internal/config/: main.go
internal/limit/: main.go
mapreduce/: Cargo.toml  cassandra.cql  docker-compose.yaml  loader.py
mapreduce/src/: main.rs
shop-server/: .dockerignore  Dockerfile  config-local.yaml  config.yaml  run.sh  run_local.sh
sql/: indexes.sql  requests.sql  schema.sql
(+62 files in other folders)
