[package]
name = "mapreduce"
version = "0.1.0"
authors = ["Pavlo Tokariev <pavlo.tokariev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
chrono          = { version = "0.4", features = ["serde"] }